core code updates - change method calls deprecated in JDK 9 to 11
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@5839 7c7dc5f5-a22d-0410-a3af-b41755a11667